Fixing up a few bugs (thanks mrfrase3 for fixing the fontmin-webpack issue by changing push to unshift).

--- a/vsfh-client/src/Routes/Browse.less
+++ b/vsfh-client/src/Routes/Browse.less
@@ -40,7 +40,7 @@
     white-space: pre-wrap;
 }
 
-.small.checkbox {
+.checkbox.small {
     display: inline-block;
     overflow: hidden;
     opacity: 0;
@@ -50,20 +50,20 @@
     vertical-align: -1px;
 }
 
-.small.checkbox.checked {
+.checkbox.small.checked {
     opacity: 1;
 }
 
-.tree-node:hover > .small.checkbox {
+.tree-node:hover > .checkbox.small {
     opacity: 1;
 }
 
-.small.checkbox label::before {
+.checkbox.small label::before {
     height: 1em;
     width: 1em;
 }
 
-.small.checkbox label::after {
+.checkbox.small label::after {
     height: 1em;
     width: 14px;
     font-size: 0.85em;
